--- a/src/styles/tabs-style.css
+++ b/src/styles/tabs-style.css
@@ -90,7 +90,6 @@ html {
 }
 
 .tab-menu {
-	margin: 55px auto 0;
 	width: 100%;
 	max-width: 3000px;
 	position: relative;
